# Art-Vault

./: README.md  app.py  commissions.db  database.py  pyproject.toml
art_vault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
artvault/: app.py  models.py
artvault.egg-info/: PKG-INFO
artvault/static/: style.css
artvault/templates/: index.html
templates/: add.html
